--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 .navbar-container{
     width: auto;
     height: 70px;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: space-around;
